# qt6_cuda_test

./: .gitignore  CMakeLists.txt  cuda_test.cu  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp
